feat: add API create books
